--- a/index.html
+++ b/index.html
@@ -3,25 +3,114 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Has This Domain Expired?</title>
+    <title>Domain Availability Checker</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 50px; }
-        input, button { padding: 10px; font-size: 16px; margin: 5px; }
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 50px;
+            background-color: #f4f4f4;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        input {
+            padding: 10px;
+            width: 300px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        button {
+            padding: 10px 15px;
+            background-color: #28a745;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #218838;
+        }
+
+        #result, #suggestions {
+            margin-top: 20px;
+            font-size: 18px;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin: 5px 0;
+        }
+
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
-    <h1>Has This Domain Expired?</h1>
-    <p>Enter a domain name to check its status.</p>
-    <input type="text" id="domainInput" placeholder="example.com">
-    <button onclick="checkDomain()">Check</button>
-    <p id="result"></p>
-<script>
-    async function checkDomain() {
-        let domain = document.getElementById("domainInput").value;
-        let response = await fetch(`https://domain-check-api.onrender.com/check?domain=${domain}`);
-        let result = await response.json();
-        document.getElementById("result").innerHTML = result.message;
-    }
-</script>
+
+    <h1>Check Domain Availability</h1>
+
+    <input type="text" id="domainInput" placeholder="Enter a domain name">
+    <button onclick="checkDomain()">Check Availability</button>
+
+    <div id="result"></div>
+    <div id="suggestions"></div> <!-- ✅ AI-generated suggestions appear here -->
+
+    <script>
+        async function checkDomain() {
+            let domain = document.getElementById("domainInput").value;
+            let resultDiv = document.getElementById("result");
+            let suggestionsDiv = document.getElementById("suggestions");
+
+            // Clear previous results
+            resultDiv.innerHTML = "";
+            suggestionsDiv.innerHTML = "";
+
+            if (!domain) {
+                resultDiv.innerHTML = "❌ Please enter a domain name.";
+                return;
+            }
+
+            try {
+                // Call the API
+                let response = await fetch(`https://domain-check-api.onrender.com/check?domain=${domain}`);
+                let data = await response.json();
+
+                // Display the result message
+                resultDiv.innerHTML = data.message;
+
+                // Show alternative domain suggestions (if available)
+                if (data.alternatives && data.alternatives.length > 0) {
+                    let suggestionsHTML = "<h3>🔍 Alternative Domains:</h3><ul>";
+                    data.alternatives.forEach(suggestion => {
+                        suggestionsHTML += `<li><a href="https://${suggestion}" target="_blank">${suggestion}</a></li>`;
+                    });
+                    suggestionsHTML += "</ul>";
+                    suggestionsDiv.innerHTML = suggestionsHTML;
+                } else {
+                    suggestionsDiv.innerHTML = "";
+                }
+            } catch (error) {
+                console.error("Error fetching data:", error);
+                resultDiv.innerHTML = "⚠️ Error checking domain. Please try again later.";
+                suggestionsDiv.innerHTML = "";
+            }
+        }
+    </script>
+
 </body>
 </html>
