--- a/index.html
+++ b/index.html
@@ -3,114 +3,147 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Domain Availability Checker</title>
+    <title>Expired or Taken?</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            margin: 50px;
-            background-color: #f4f4f4;
+            margin: 20px;
         }
-
-        h1 {
-            color: #333;
-        }
-
         input {
             padding: 10px;
             width: 300px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+            font-size: 16px;
         }
-
         button {
             padding: 10px 15px;
-            background-color: #28a745;
-            color: white;
-            border: none;
-            border-radius: 5px;
+            font-size: 16px;
             cursor: pointer;
         }
-
-        button:hover {
-            background-color: #218838;
+        #loading {
+            display: none;
+            font-size: 16px;
+            margin-top: 10px;
         }
-
-        #result, #suggestions {
+        .spinner {
+            border: 4px solid rgba(0, 0, 0, 0.1);
+            border-left-color: #000;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            animation: spin 1s linear infinite;
+            display: inline-block;
+            margin-right: 10px;
+        }
+        @keyframes spin {
+            to { transform: rotate(360deg); }
+        }
+        #ai-suggestions {
             margin-top: 20px;
-            font-size: 18px;
         }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        li {
-            margin: 5px 0;
-        }
-
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
+        #refresh-suggestions {
+            display: none;
+            margin-top: 10px;
+            padding: 8px 12px;
+            font-size: 14px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
         }
     </style>
 </head>
 <body>
+    <h1>Expired or Taken?</h1>
+    <p>Enter a domain name to check its availability:</p>
+    <input type="text" id="domainInput" placeholder="example.com">
+    <button onclick="checkDomain()">Check</button>
 
-    <h1>Check Domain Availability</h1>
-
-    <input type="text" id="domainInput" placeholder="Enter a domain name">
-    <button onclick="checkDomain()">Check Availability</button>
+    <div id="loading">
+        <span class="spinner"></span>
+        <span id="loading-text">Checking WHOIS. Verifying WHOISN'T...</span>
+    </div>
 
     <div id="result"></div>
-    <div id="suggestions"></div> <!-- ✅ AI-generated suggestions appear here -->
+    <div id="ai-suggestions"></div>
+    <button id="refresh-suggestions" onclick="refreshSuggestions()">🔄 Refresh Suggestions</button>
 
     <script>
-        async function checkDomain() {
-            let domain = document.getElementById("domainInput").value;
-            let resultDiv = document.getElementById("result");
-            let suggestionsDiv = document.getElementById("suggestions");
+        const loadingMessages = [
+            "Checking WHOIS. Verifying WHOISN'T...",
+            "Computing TLDs and TL;DRs...",
+            "Asking the internet nicely if this domain exists...",
+            "Rebuilding the web one query at a time...",
+            "Translating binary into human disappointment..."
+        ];
 
-            // Clear previous results
-            resultDiv.innerHTML = "";
-            suggestionsDiv.innerHTML = "";
-
+        function checkDomain() {
+            let domain = document.getElementById("domainInput").value.trim();
             if (!domain) {
-                resultDiv.innerHTML = "❌ Please enter a domain name.";
+                alert("Please enter a domain name.");
                 return;
             }
 
-            try {
-                // Call the API
-                let response = await fetch(`https://domain-check-api.onrender.com/check?domain=${domain}`);
-                let data = await response.json();
+            document.getElementById("result").innerHTML = "";
+            document.getElementById("ai-suggestions").innerHTML = "";
+            document.getElementById("refresh-suggestions").style.display = "none";
 
-                // Display the result message
-                resultDiv.innerHTML = data.message;
+            let loading = document.getElementById("loading");
+            let loadingText = document.getElementById("loading-text");
+            loading.style.display = "block";
 
-                // Show alternative domain suggestions (if available)
-                if (data.alternatives && data.alternatives.length > 0) {
-                    let suggestionsHTML = "<h3>🔍 Alternative Domains:</h3><ul>";
-                    data.alternatives.forEach(suggestion => {
-                        suggestionsHTML += `<li><a href="https://${suggestion}" target="_blank">${suggestion}</a></li>`;
+            let counter = 0;
+            let loadingInterval = setInterval(() => {
+                loadingText.innerText = loadingMessages[counter % loadingMessages.length];
+                counter++;
+            }, 1500);
+
+            fetch(`https://your-api-url.com/check?domain=${domain}`)
+                .then(response => response.json())
+                .then(data => {
+                    clearInterval(loadingInterval);
+                    loading.style.display = "none";
+
+                    let resultDiv = document.getElementById("result");
+                    resultDiv.innerHTML = `<p><strong>${domain}</strong> is ${data.available ? "<span style='color:green'>AVAILABLE</span>" : "<span style='color:red'>TAKEN</span>"}.</p>`;
+
+                    fetchAISuggestions(domain);
+                })
+                .catch(error => {
+                    clearInterval(loadingInterval);
+                    loading.style.display = "none";
+                    document.getElementById("result").innerHTML = `<p style="color:red;">Error checking domain. Try again later.</p>`;
+                });
+        }
+
+        function fetchAISuggestions(domain) {
+            fetch(`https://your-api-url.com/ai-suggestions?domain=${domain}`)
+                .then(response => response.json())
+                .then(data => {
+                    let suggestionsDiv = document.getElementById("ai-suggestions");
+                    suggestionsDiv.innerHTML = "<h3>AI-Generated Alternatives:</h3><ul>";
+
+                    data.suggestions.forEach(suggestion => {
+                        suggestionsDiv.innerHTML += `<li>${suggestion}</li>`;
                     });
-                    suggestionsHTML += "</ul>";
-                    suggestionsDiv.innerHTML = suggestionsHTML;
-                } else {
-                    suggestionsDiv.innerHTML = "";
-                }
-            } catch (error) {
-                console.error("Error fetching data:", error);
-                resultDiv.innerHTML = "⚠️ Error checking domain. Please try again later.";
-                suggestionsDiv.innerHTML = "";
-            }
+
+                    suggestionsDiv.innerHTML += "</ul>";
+                    document.getElementById("refresh-suggestions").style.display = "block";
+                })
+                .catch(error => {
+                    document.getElementById("ai-suggestions").innerHTML = `<p style="color:red;">Error fetching AI suggestions.</p>`;
+                });
+        }
+
+        function refreshSuggestions() {
+            let domain = document.getElementById("domainInput").value.trim();
+            if (!domain) return;
+
+            document.getElementById("ai-suggestions").innerHTML = "<p>🔄 Refreshing suggestions...</p>";
+
+            fetchAISuggestions(domain);
         }
     </script>
-
 </body>
 </html>
